# SENTINEL-SHIELD

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  KNOWN_LIMITATIONS.md  LICENSE  README.md  SECURITY.md
src/: learning_control.rs  lib.rs  main.rs
src/dashboard/: learning_api.rs  mod.rs
src/detection/: correlation.rs  coverage.rs  mod.rs  scorer.rs  velocity.rs
src/graph/: edges.rs  mod.rs  nodes.rs  patterns.rs
src/log_sources/: auth_log.rs  mod.rs  syslog.rs  web_log.rs
src/response/: alerter.rs  blocker.rs  mod.rs
tests/: attack_simulator.py  integration.rs  integration_test.ps1  stress_test.py
