[package]
name = "sentinel-shield"
version = "0.1.1"
edition = "2021"
description = "Defense-only AI attack detection daemon for small companies"
license = "Apache-2.0"
authors = ["CIPSCORPS LLC <glass@cipscorps.io>"]
repository = "https://github.com/For-Sunny/SENTINEL-SHIELD"
homepage = "https://cipscorps.io"
readme = "README.md"
keywords = ["security", "intrusion-detection", "firewall", "cybersecurity", "hebbian"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1"

# HTTP dashboard
tiny_http = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

# HTTP client (sync, lightweight - for webhook alerts)
ureq = "2"

# Configuration
toml = "0.8"

# Signal handling for graceful shutdown
ctrlc = "3.4"
